Created FAQ + modified how information is handled in /Stats/Teams and /Bet/Index + Adjusted styling for some pages.

--- a/Gobot/Gobot/Views/Shared/_Layout.cshtml
+++ b/Gobot/Gobot/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
             <div style="background-image: url(@Url.Content("~/Images/shop.png"))"></div>
         </a>*@
 
-        <a id="FAQ" class="small" href="#">
+        <a id="FAQ" class="small" href="@(Url.Action("faq", "Support"))">
             <div style="background-image: url(@Url.Content("~/Images/faq.png"))"></div>
         </a>
         <a id="contact" class="small" href="#">
