--- a/Gobot/Gobot/Content/Teams.scss
+++ b/Gobot/Gobot/Content/Teams.scss
@@ -15,6 +15,8 @@ $teamH: 250px;
     width: $teamH;
     border: 1px solid $grey;
     background-color: $infoBgColor;
+    background-position: center;
+    background-size: 100%;
     cursor: pointer;
     overflow: hidden;
 
@@ -24,7 +26,7 @@ $teamH: 250px;
         left: 0;
         width: 100%;
         height: 0;
-        background-color: rgba(0,0,0,0.85);
+        background-color: rgba(0,0,0,0.90);
         opacity: 0;
 
         > h1 {
@@ -67,7 +69,6 @@ $teamH: 250px;
 .team_info {
     position: relative;
     float: left;
-    width: 100%;
     height: auto;
     top: -1px;
     background-color: $infoBgColor;
