--- a/Gobot/Gobot/Views/Bet/Index.cshtml
+++ b/Gobot/Gobot/Views/Bet/Index.cshtml
@@ -40,7 +40,7 @@
     <a href="#"><h1>Visionner une publicité</h1></a>
 </div>
 
-@{
+@*@{
     if (((List<Gobot.Models.Match>)Model).Count > 0)
     {
         foreach (Gobot.Models.Match m in (List<Gobot.Models.Match>)Model)
@@ -105,7 +105,7 @@
             </div>
         }
     }
-}
+}*@
 
 <div class="info">
     <div class="time sqr"><h3>12:00</h3></div>
@@ -128,6 +128,7 @@
                 }
             }
         </div>
+        <input type="hidden" name="teamId" value="1" />
     </div>
     <div class="vs"><h1>VS</h1></div>
     <div class="team team2">
@@ -136,6 +137,7 @@
             <h4 class="grey">Mise Totale<offw> 5000</offw>GC</h4>
         </div>
         <div class="img" style="background-image: url(/Images/lrg.png);"></div>
+        <input type="hidden" name="teamId" value="2" />
     </div>
 
     <div class="manageBet">
@@ -152,6 +154,7 @@
             }
         }
     </div>
+    <input name="matchId" type="hidden" value="1" />
 </div>
 
 <div class="info">
@@ -175,6 +178,7 @@
                 }
             }
         </div>
+        <input type="hidden" name="teamId" value="1" />
     </div>
     <div class="vs"><h1>VS</h1></div>
     <div class="team team2">
@@ -183,6 +187,7 @@
             <h4 class="grey">Mise Totale<offw> 5000</offw>GC</h4>
         </div>
         <div class="img" style="background-image: url(/Images/lrg.png);"></div>
+        <input type="hidden" name="teamId" value="2" />
     </div>
 
     <div class="manageBet">
@@ -199,6 +204,7 @@
             }
         }
     </div>
+    <input name="matchId" type="hidden" value="2" />
 </div>
 
 @section Scripts {
@@ -237,6 +243,7 @@
             let teams = $(this).closest(".info").find("> .team");
             var teamId;
             var teamNum = 1;
+            var matchId = $(this).closest(".info").find("> input").val();
             var teamName;
 
             var i = 1;
@@ -250,7 +257,8 @@
                 i++;
             });
 
-            createBetForm($(this).closest(".info"), teamId, teamNum, teamName);
+
+            createBetForm($(this).closest(".info"), teamId, matchId, teamNum, teamName);
 
             var toAdd = $(this).closest(".info").find(".team" + teamNum + " > .text > h4:last-of-type > green").text();
             changeBetValue($(".betSelector > .add"), parseInt(toAdd));
@@ -260,9 +268,10 @@
         $(document).on("click", "#bet_chooseTeam > div:not(.separator)", function () {
             let selectedTeam = $(this).is(':first-child') ? 1 : 2;
             let teamName = $(this).find("> h1").text();
-            let teamId = $(this).parent().prev().find(".team" + selectedTeam).attr("id");
+            let teamId = $(this).parent().prev().find(".team" + selectedTeam + "> input").attr("value");
+            let matchId = $(this).parent().prev().find("> input").attr("value");
 
-            createBetForm($(this).parent(), teamId, selectedTeam, teamName);
+            createBetForm($(this).parent(), teamId, matchId, selectedTeam, teamName);
         });
 
         $(document).on("click", ".betSelector > .sub", function () {
@@ -313,7 +322,7 @@
             changeCoinsValue();
         }
 
-        function createBetForm(e, id, pos, teamName) {
+        function createBetForm(e, teamId, matchId, pos, teamName) {
             $("#bet_placeBet").remove();
             $('<div class="info" id="bet_placeBet"></div>').insertAfter(e);
             $("#bet_chooseTeam").remove();
@@ -323,13 +332,14 @@
                 $("#bet_placeBet").append('<div class="separator left"><div class="square"></div></div>');
             }
 
-            $("#bet_placeBet").append('<form action="/" method="post"></form>');
-            $('#bet_placeBet > form').append('<input type="hidden" name="teamId" value="' + id + '"/>');
+            $("#bet_placeBet").append('<form action="@(Url.Action("Add", "Bet"))" method="post"></form>');
+            $('#bet_placeBet > form').append('<input type="hidden" name="teamId" value="' + teamId + '"/>');
+            $('#bet_placeBet > form').append('<input type="hidden" name="matchId" value="' + matchId + '"/>');
             $("#bet_placeBet > form").append('<div><h2>Crédits disponibles</h2><h2><white class="baseGC">4500</white> <orange>GC</orange></h2></div>'); // Available credits
             $("#bet_placeBet > form").append('<div><h2>-</h2><h2><red class="deductGC">0</red> <orange style="visibility: hidden;">GC</orange></h2></div>'); // Deducted credits
             $("#bet_placeBet > form").append('<div><h2>=</h2><h2><white class="remainGC">0</white> <orange>GC</orange></h2></div>'); // Remaining credits
             $("#bet_placeBet > form").append('<div class="betSelector"></div>');
-            $("#bet_placeBet > form > .betSelector").append('<div class="sub"></div><input type="number" value="0" max="9999999" step="1"/><div class="add"></div>');
+            $("#bet_placeBet > form > .betSelector").append('<div class="sub"></div><input type="number" name="Amount" value="0" max="9999999" step="1"/><div class="add"></div>');
             $("#bet_placeBet > form").append('<input class="' + (pos == 1 ? 'right' : 'left') + '" type="submit" value="Confirmer"></input>');
 
             if (pos == 2) {
