--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -21,7 +21,7 @@
 
 <div class="info" id="accountInfo">
     <div>
-        <img id="img" src="@Model.ProfilPic" />
+        <img id="img" src="@(Session["User_img"])" />
     </div>
     <div id="userInfo">
         <h5 id="name" title="@Html.DisplayFor(model => model.Username)">@Html.DisplayFor(model => model.Username)</h5>
@@ -188,7 +188,7 @@
 
                 $("#userOptions > h3, #openOption").hide();
                 $("#closeOption").show();
-                
+
                 onResize();
                 posOptionTabs();
             }
@@ -244,7 +244,7 @@
             let elems = ["#changeImg", "#changeEmail"];
             for (var i = 0; i < elems.length; i++) {
                 var pwdImg = $("#changePwd > img").css("top").replace("px", "");
-                var pwdImgHeight = $("#changePwd > img").height() 
+                var pwdImgHeight = $("#changePwd > img").height()
                 var elemImgHeight = $(elems[i] + " > img").height();
                 var total = parseFloat(pwdImg) + parseFloat(pwdImgHeight) - parseFloat(elemImgHeight);
                 $(elems[i] + "> img").attr("style", "top: " + total + "px !important;");
@@ -268,7 +268,7 @@
             $("#options").append('<form action="/Account/Index" enctype="multipart/form-data" method="post" autocomplete="off"><div id="optionForm"><div class="optionHeader"><img id="' + id + '_headerImg" src="/Images/option_' + id + '.png" /><h2>' + $('#' + id).find("h2").text() + '</h2></div></div></form>');
 
             if (id == "changeImg") {
-                $("#optionForm").append('<img id="UploadedImage" src="' + '@Url.Content(Model.ProfilPic)' + '"><input id="ImageUploader" name="ImageUploader" type="file">');
+                $("#optionForm").append('<img id="UploadedImage" src="' + '@(Session["User_img"])' + '"><input id="ImageUploader" name="ImageUploader" type="file">');
                 $("#optionForm").append('<input id="UploadButton" type="button" value="Choisir une image...">');
             }
             else if (id == "changePwd") {
@@ -293,11 +293,11 @@
         function readURL(input) {
             if (input.files && input.files[0]) {
                 var reader = new FileReader();
-            
+
                 reader.onload = function (e) {
                     $('#UploadedImage').attr('src', e.target.result);
                 }
-            
+
                 reader.readAsDataURL(input.files[0]);
             }
         }
