--- a/Gobot/Gobot/Views/Shared/_Layout.cshtml
+++ b/Gobot/Gobot/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
         <a id="matchs" href="@Url.Action("Index", "Watch")">
             <div style="background-image: url(@Url.Content("~/Images/matches.png"))"></div>
         </a>
-        <a id="gagueure" href="@Url.Action("Index", "Bet")">
+        <a id="parier" href="@Url.Action("Index", "Bet")">
             <div style="background-image: url(@Url.Content("~/Images/bet.png"))"></div>
         </a>
         <a id="équipes" href="@Url.Action("Teams", "Stats")">
