--- a/Gobot/Gobot/Views/Support/faq.cshtml
+++ b/Gobot/Gobot/Views/Support/faq.cshtml
@@ -32,6 +32,11 @@
 </div>
 
 <div class="info">
+    <h1>Notre superviseur</h1>
+    <p>Philippe Simard</p>
+</div>
+
+<div class="info">
     <h1>Si vous avez d’autres questions, vous pouvez nous contacter : <a href="mailto:go.bots@outlook.com?Subject=I%20need%20help" target="_top">go.bots@outlook.com</a> </h1>
 </div>
 
