--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -83,14 +83,17 @@ img {
     position: relative;
     width: 50%;
     margin: 40px 25%; }
-    #error_overlay > div > #error_overlay_image, #js_error > div > #error_overlay_image {
+    #error_overlay > div .overlay_image, #error_overlay > div > #error_overlay_image, #error_overlay > div > #success_overlay_image, #js_error > div .overlay_image, #js_error > div > #error_overlay_image, #js_error > div > #success_overlay_image {
       display: block;
       position: relative;
       width: 220px;
       height: 220px;
       margin-left: calc(50% - 220px / 2);
-      background: #963434 no-repeat center/55% url("/Images/close.png");
       border-radius: 50%; }
+    #error_overlay > div > #error_overlay_image, #js_error > div > #error_overlay_image {
+      background: #963434 no-repeat center/55% url("/Images/close.png"); }
+    #error_overlay > div > #success_overlay_image, #js_error > div > #success_overlay_image {
+      background: #51c24b no-repeat center/55% url("/Images/check.png"); }
     #error_overlay > div > h1, #error_overlay > div > a, #error_overlay > div > button, #js_error > div > h1, #js_error > div > a, #js_error > div > button {
       display: block !important;
       text-align: center;
