--- a/Gobot/Gobot/Content/_global.scss
+++ b/Gobot/Gobot/Content/_global.scss
@@ -103,15 +103,23 @@ img                         { border: 0; }
         width: 50%;
         margin: 40px 25%;
 
-        > #error_overlay_image {
+        .overlay_image {
             display: block;
             position: relative;
             width: 220px;
             height: 220px;
             margin-left: calc(50% - 220px / 2);
-            background: $red no-repeat center/55% url("/Images/close.png");
             border-radius: 50%;
         }
+            > #error_overlay_image {
+                @extend .overlay_image;
+                background: $red no-repeat center/55% url("/Images/close.png");
+            }
+            > #success_overlay_image {
+                @extend .overlay_image;
+                background: $green no-repeat center/55% url("/Images/check.png");
+            }
+
         > h1, > a, > button {
             display: block !important;
             text-align: center;
