--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -16,6 +16,20 @@
                 <button id="close_errorOverlay">Fermer</button>
             </div>
         </div>
+
+        ViewBag.Error = null;
+    }
+    else if (ViewBag.Success != null && ViewBag.Success != "")
+    {
+        <div id="error_overlay">
+            <div>
+                <div id="success_overlay_image"></div>
+                <h1>@ViewBag.Success</h1>
+                <button id="close_errorOverlay">Fermer</button>
+            </div>
+        </div>
+
+        ViewBag.Success = null;
     }
 }
 
@@ -265,29 +279,70 @@
         }
 
         function showForm(id) {
-            $("#options").append('<form action="/Account/Index" enctype="multipart/form-data" method="post" autocomplete="off"><div id="optionForm"><div class="optionHeader"><img id="' + id + '_headerImg" src="/Images/option_' + id + '.png" /><h2>' + $('#' + id).find("h2").text() + '</h2></div></div></form>');
-
+            $("#options").append('<form id="uploadForm" action="/Account/Index" enctype="multipart/form-data" method="post" autocomplete="off"><div id="optionForm"><div class="optionHeader"><img id="' + id + '_headerImg" src="/Images/option_' + id + '.png" /><h2>' + $('#' + id).find("h2").text() + '</h2></div></div></form>');
+            var submitFn;
             if (id == "changeImg") {
                 $("#optionForm").append('<img id="UploadedImage" src="' + '@(Session["User_img"])' + '"><input id="ImageUploader" name="ImageUploader" type="file">');
                 $("#optionForm").append('<input id="UploadButton" type="button" value="Choisir une image...">');
+                submitFn = "submitImg()";
             }
             else if (id == "changePwd") {
                 $("#optionForm").append('<div><h2>Ancien <grey>mot de passe</grey></h2><input name="oldPwd" type="password"/></div>');
                 $("#optionForm").append('<div><h2>Nouveau <grey>mot de passe</grey></h2><input name="newPwd" type="password"/></div>');
                 $("#optionForm").append('<div><h2>Confirmer <grey>mot de passe</grey></h2><input name="confirmPwd" type="password"/></div>');
+                submitFn = "submitPwd()";
             }
             else {
                 $("#optionForm").append('<div><h2>Nouvelle<grey> adresse courriel</grey></h2><input name="newEmail" type="text"/></div>');
                 $("#optionForm").append('<div><h2>Confirmer<grey> adresse courriel</grey></h2><input name="confirmEmail" type="text"/></div>');
+                submitFn = "submitEmail()";
             }
 
-            $("#options > form").append('<div id="optionSubmit"><input type="submit" value="Confirmer" /><div><img src="/Images/close_red.png" /><h3>Annuler</h3></div><img class="triangle" src="/Images/accountOption_triangle.png" /></div>');
+            $("#options > form").append('<div id="optionSubmit"><button type="submit" onClick="' + submitFn + '">Confirmer</button><div><img src="/Images/close_red.png" /><h3>Annuler</h3></div><img class="triangle" src="/Images/accountOption_triangle.png" /></div>');
             $('#' + id).hide();
 
-            v_align_margin($("#optionSubmit > input"), $("#optionSubmit"), $("#optionSubmit > input").height());
-            h_align($("#optionSubmit > input"), $("#optionSubmit"), $("#optionSubmit > input").outerWidth());
+            v_align_margin($("#optionSubmit > button"), $("#optionSubmit"), $("#optionSubmit > button").height());
+            h_align($("#optionSubmit > button"), $("#optionSubmit"), $("#optionSubmit > button").outerWidth());
             h_align($("#optionSubmit > div"), $("#optionSubmit"), $("#optionSubmit > div > h3").width() + $("#optionSubmit > div > img").width());
             h_align($(".optionHeader"), $("#optionForm"), $(".optionHeader").width());
+        }
+
+        function submitImg() {
+            var postdata = $('#uploadForm').serialize();    
+            var file = document.getElementById('ImageUploader').files[0];
+            var fd = new FormData();
+            fd.append("file", file);
+            var xhr = new XMLHttpRequest();
+            xhr.open("POST", "/Account/UpdateImage", false);
+            xhr.send(fd); 
+        }
+
+        function submitPwd() {
+            submitForm("UpdatePassword");
+        }
+
+        function submitEmail() {
+            submitForm("UpdateEmail");
+        }
+
+        function submitForm(link) {
+            $.ajax({
+                type: "POST",
+                url: "/Account/" + link,
+                data: JSON.stringify($("#uploadForm").serializeArray()),
+                success: function(){},
+                dataType: "json",
+                contentType : "application/json"
+            });
+        }
+
+        function submitForm(data, link) {
+            var postdata = $('#uploadForm').serialize();          
+            var fd = new FormData();
+            fd.append("file", $("#ImageUploader").files[0]);
+            var xhr = new XMLHttpRequest();
+            xhr.open("POST", "/Account/" + link, false);
+            xhr.send(fd); 
         }
 
         function readURL(input) {
