--- a/Gobot/Gobot/Views/Bet/Index.cshtml
+++ b/Gobot/Gobot/Views/Bet/Index.cshtml
@@ -20,7 +20,7 @@
 }
 
 @{
-    if (((List<Gobot.Models.Match>)Model).Count > 0)
+    if (Model.Count() > 0)
     {
         <div class="info" id="header">
             <h6>Misez sur les parties à venir!</h6>
@@ -41,12 +41,12 @@
 </div>
 
 @{
-    if (((List<Gobot.Models.Match>)Model).Count > 0)
+    if (Model.Count() > 0)
     {
-        foreach (Gobot.Models.Match m in (List<Gobot.Models.Match>)Model)
+        foreach (Gobot.Models.Match m in Model)
         {
             <div class="info">
-                <div class="time sqr"><h3>@(m.Date.TimeOfDay)</h3></div>
+                <div class="time sqr"><h3>@(m.Date.TimeOfDay.ToString())</h3></div>
 
                 <div class="team team1">
                     <div class="img" style="background-image: url(/Images/@(m.Teams[0].Name.ToLower()).png);"></div>
