--- a/Gobot/Gobot/Views/Bet/Index.cshtml
+++ b/Gobot/Gobot/Views/Bet/Index.cshtml
@@ -43,56 +43,59 @@
 @{
     if (Model.Count() > 0)
     {
-        foreach (Gobot.Models.Match m in Model)
+        for (int i = 0; i < Model.Count; i++)
         {
+
+            //foreach (Gobot.Models.Match m in Model)
+            //{
             <div class="info">
-                <div class="time sqr"><h3>@(m.Date.TimeOfDay.ToString())</h3></div>
+                <div class="time sqr"><h3>@Model[i].Date.Hour:@Model[i].Date.Minute</h3></div>
 
                 <div class="team team1">
-                    <div class="img" style="background-image: url(/Images/@(m.Teams[0].Name.ToLower()).png);"></div>
+                    <div class="img" style="background-image: url(/Images/@(Model[i].Teams[0].Name.ToLower()).png);"></div>
                     <div class="text">
                         @{
-                            if (m.CurrentUserBet && m.TeamNumberBet == 1)
+                            if (Model[i].CurrentUserBet && Model[i].TeamNumberBet == 1)
                             {
-                                <h1><green>@(m.Teams[0].Name.ToUpper())</green></h1>
-                                <h4 class="grey">Mise Totale<green> @(m.Team1TotalBet)</green>GC</h4>
-                                <h4 class="grey">Votre mise<green> @(m.CurrentUserAmount)</green>GC</h4>
+                                <h1><green>@(Model[i].Teams[0].Name.ToUpper())</green></h1>
+                                <h4 class="grey">Mise Totale<green> @(Model[i].Team1TotalBet)</green>GC</h4>
+                                <h4 class="grey">Votre mise<green> @(Model[i].CurrentUserAmount)</green>GC</h4>
                             }
                             else
                             {
-                                <h1>@(m.Teams[0].Name.ToUpper())</h1>
-                                <h4 class="grey">Mise Totale<offw> @(m.Team1TotalBet)</offw>GC</h4>
+                                <h1>@(Model[i].Teams[0].Name.ToUpper())</h1>
+                                <h4 class="grey">Mise Totale<offw> @(Model[i].Team1TotalBet)</offw>GC</h4>
                             }
                         }
                     </div>
-                    <input type="hidden" name="teamId" value="@(m.Teams[0].Id)" />
+                    <input type="hidden" name="teamId" value="@(Model[i].Teams[0].Id)" />
                 </div>
                 <div class="vs"><h1>VS</h1></div>
                 <div class="team team2">
                     <div class="text">
                         @{
-                            if (m.CurrentUserBet && m.TeamNumberBet == 2)
+                            if (Model[i].CurrentUserBet && Model[i].TeamNumberBet == 2)
                             {
-                                <h1><green>@(m.Teams[1].Name.ToUpper())</green></h1>
-                                <h4 class="grey">Mise Totale<green> @(m.Team2TotalBet)</green>GC</h4>
-                                <h4 class="grey">Votre mise<green> @(m.CurrentUserAmount)</green>GC</h4>
+                                <h1><green>@(Model[i].Teams[1].Name.ToUpper())</green></h1>
+                                <h4 class="grey">Mise Totale<green> @(Model[i].Team2TotalBet)</green>GC</h4>
+                                <h4 class="grey">Votre mise<green> @(Model[i].CurrentUserAmount)</green>GC</h4>
                             }
                             else
                             {
-                                <h1>@(m.Teams[1].Name.ToUpper())</h1>
-                                <h4 class="grey">Mise Totale<offw> @(m.Team2TotalBet)</offw>GC</h4>
+                                <h1>@(Model[i].Teams[1].Name.ToUpper())</h1>
+                                <h4 class="grey">Mise Totale<offw> @(Model[i].Team2TotalBet)</offw>GC</h4>
                             }
                         }
                     </div>
-                    <div class="img" style="background-image: url(/Images/@(m.Teams[1].Name.ToLower()).png);"></div>
-                    <input type="hidden" name="teamId" value="@(m.Teams[1].Id)" />
+                    <div class="img" style="background-image: url(/Images/@(Model[i].Teams[1].Name.ToLower()).png);"></div>
+                    <input type="hidden" name="teamId" value="@(Model[i].Teams[1].Id)" />
                 </div>
 
                 <div class="manageBet">
                     @{
-                        if (m.CurrentUserBet)
+                        if (Model[i].CurrentUserBet)
                         {
-                            <div class="remove sqr"><a href="@Url.Action("Remove", "Bet", new { tId = m.Teams[m.TeamNumberBet - 1].Id, mId = m.Id })"></a><div><h2>Retirer</h2></div></div>
+                            <div class="remove sqr"><a href="@Url.Action("Remove", "Bet", new { tId = Model[i].Teams[Model[i].TeamNumberBet - 1].Id, mId = Model[i].Id })"></a><div><h2>Retirer</h2></div></div>
                             <div class="edit sqr"><div><h2>Modifier</h2></div></div>
                         }
                         else
@@ -101,7 +104,7 @@
                         }
                     }
                 </div>
-                <input name="matchId" type="hidden" value="@(m.Id)" />
+                <input name="matchId" type="hidden" value="@(Model[i].Id)" />
             </div>
         }
     }
