--- a/Gobot/Gobot/Views/Bet/Index.cshtml
+++ b/Gobot/Gobot/Views/Bet/Index.cshtml
@@ -45,14 +45,11 @@
     {
         for (int i = 0; i < Model.Count; i++)
         {
-
-            //foreach (Gobot.Models.Match m in Model)
-            //{
             <div class="info">
                 <div class="time sqr"><h3>@Model[i].Date.Hour:@Model[i].Date.Minute</h3></div>
 
                 <div class="team team1">
-                    <div class="img" style="background-image: url(/Images/@(Model[i].Teams[0].Name.ToLower()).png);"></div>
+                    <div class="img" style="background-image: url(/Images/@(Model[i].Teams[0].ImagePath));"></div>
                     <div class="text">
                         @{
                             if (Model[i].CurrentUserBet && Model[i].TeamNumberBet == 1)
@@ -87,7 +84,7 @@
                             }
                         }
                     </div>
-                    <div class="img" style="background-image: url(/Images/@(Model[i].Teams[1].Name.ToLower()).png);"></div>
+                    <div class="img" style="background-image: url(/Images/@(Model[i].Teams[1].ImagePath));"></div>
                     <input type="hidden" name="teamId" value="@(Model[i].Teams[1].Id)" />
                 </div>
 
