--- a/Gobot/Gobot/Content/Bet.scss
+++ b/Gobot/Gobot/Content/Bet.scss
@@ -44,6 +44,13 @@ $height: 100px;
     h4:first-of-type { margin-top: 5px; }
 }
 
+@media screen and (max-width: 1200px) {
+    .team > .img { display: none; }
+    .team > .text { width: 100% !important; }
+    .team1 > .text { padding-left: 15px; }
+    .team2 > .text { padding-right: 15px; }
+}
+
 .team1 {
     h1, h4 { text-indent: 10px; text-align: left; }
     > .img {
@@ -62,6 +69,8 @@ $height: 100px;
         -webkit-clip-path: polygon(25% 0, 100% 0, 100% 100%, 0 100%);
         clip-path: polygon(25% 0, 100% 0, 100% 100%, 0 100%);
     }
+
+    > .text { float: right; }
 }
 
 .manageBet {
