--- a/Gobot/Gobot/Views/Bet/Index.cshtml
+++ b/Gobot/Gobot/Views/Bet/Index.cshtml
@@ -69,6 +69,7 @@
                 </div>
                 <div class="vs"><h1>VS</h1></div>
                 <div class="team team2">
+                    <div class="img" style="background-image: url(/Images/@(Model[i].Teams[1].ImagePath));"></div>
                     <div class="text">
                         @{
                             if (Model[i].CurrentUserBet && Model[i].TeamNumberBet == 2)
@@ -84,7 +85,6 @@
                             }
                         }
                     </div>
-                    <div class="img" style="background-image: url(/Images/@(Model[i].Teams[1].ImagePath));"></div>
                     <input type="hidden" name="teamId" value="@(Model[i].Teams[1].Id)" />
                 </div>
 
@@ -121,7 +121,7 @@
             $(this).find("> div").css("left", -($(this).find("> div").find("h2").outerWidth()));
         });
         $(".manageBet > .edit").mouseenter(function () {
-            $(".manageBet > .remove").css("left", -($(this).find("> div").find("h2").outerWidth()));
+            $(this).prev().css("left", -($(this).find("> div").find("h2").outerWidth()));
         }).mouseleave(function () {
             $(".manageBet > .remove").css("left", 0);
         });
@@ -134,31 +134,41 @@
             $(this).closest('.info').find(' > .team > .text > h1').each(function () { teamNames.push($(this).text()); });
 
             $('<div class="info" id="bet_chooseTeam"></div>').insertAfter($(this).closest(".info"));
-            $("#bet_chooseTeam").append('<div style="background-image: url(/Images/' + teamNames[0].toLowerCase() + '.png)"><h1>' + teamNames[0].toUpperCase() + '</h1></div>');
+            $("#bet_chooseTeam").append('<div style="background-image:url(' + getBackgroundImage($(this).closest(".info").find(".team1 > .img")) + ');"><h1>' + teamNames[0].toUpperCase() + '</h1></div>');
             $("#bet_chooseTeam").append('<div class="separator"><div class="square"></div></div>');
-            $("#bet_chooseTeam").append('<div style="background-image: url(/Images/' + teamNames[1].toLowerCase() + '.png)"><h1>' + teamNames[1].toUpperCase() + '</h1></div>');
+            $("#bet_chooseTeam").append('<div style="background-image:url(' + getBackgroundImage($(this).closest(".info").find(".team2 > .img")) + ');"><h1>' + teamNames[1].toUpperCase() + '</h1></div>');
             onResize();
         });
+
+        function getBackgroundImage(div)
+        {
+            var bg = div.css('background-image');
+            bg = bg.replace('url(', '').replace(')', '').replace(/\"/gi, "");
+            return bg;
+        }
+
         $(".manageBet > .edit").click(function () {
             let teams = $(this).closest(".info").find("> .team");
             var teamId;
             var teamNum = 1;
             var matchId = $(this).closest(".info").find("> input").val();
             var teamName;
+            var imagePath;
 
             var i = 1;
             teams.each(function () {
                 let count = $(this).find("h4").length;
                 if (count == 2) {
                     teamNum = i;
-                    teamName = $(this).find("> .text > h1 > green").text();
+                    //teamName = $(this).find("> .text > h1 > green").text();
+                    imagePath = getBackgroundImage($(this).find("> .img"));
                     teamId = $(this).attr("id");
                 }
                 i++;
             });
 
 
-            createBetForm($(this).closest(".info"), teamId, matchId, teamNum, teamName);
+            createBetForm($(this).closest(".info"), teamId, matchId, teamNum, imagePath);
 
             var toAdd = $(this).closest(".info").find(".team" + teamNum + " > .text > h4:last-of-type > green").text();
             changeBetValue($(".betSelector > .add"), parseInt(toAdd));
@@ -167,11 +177,12 @@
 
         $(document).on("click", "#bet_chooseTeam > div:not(.separator)", function () {
             let selectedTeam = $(this).is(':first-child') ? 1 : 2;
-            let teamName = $(this).find("> h1").text();
+            //let teamName = $(this).find("> h1").text();
+            let imagePath = getBackgroundImage($(this));
             let teamId = $(this).parent().prev().find(".team" + selectedTeam + "> input").attr("value");
             let matchId = $(this).parent().prev().find("> input").attr("value");
 
-            createBetForm($(this).parent(), teamId, matchId, selectedTeam, teamName);
+            createBetForm($(this).parent(), teamId, matchId, selectedTeam, imagePath);
         });
 
         $(document).on("click", ".betSelector > .sub", function () {
@@ -222,20 +233,20 @@
             changeCoinsValue();
         }
 
-        function createBetForm(e, teamId, matchId, pos, teamName) {
+        function createBetForm(e, teamId, matchId, pos, imagePath) {
             $("#bet_placeBet").remove();
             $('<div class="info" id="bet_placeBet"></div>').insertAfter(e);
             $("#bet_chooseTeam").remove();
 
             if (pos == 1) {
-                $("#bet_placeBet").append('<div class="teamImg left" style="background-image: url(/Images/' + teamName.toLowerCase() + '.png)"></div>');
+                $("#bet_placeBet").append('<div class="teamImg left" style="background-image: url(' + imagePath + ')"></div>');
                 $("#bet_placeBet").append('<div class="separator left"><div class="square"></div></div>');
             }
 
             $("#bet_placeBet").append('<form action="@(Url.Action("Add", "Bet"))" method="post"></form>');
             $('#bet_placeBet > form').append('<input type="hidden" name="teamId" value="' + teamId + '"/>');
             $('#bet_placeBet > form').append('<input type="hidden" name="matchId" value="' + matchId + '"/>');
-            $("#bet_placeBet > form").append('<div><h2>Crédits disponibles</h2><h2><white class="baseGC">4500</white> <orange>GC</orange></h2></div>'); // Available credits
+            $("#bet_placeBet > form").append('<div><h2>Crédits disponibles</h2><h2><white class="baseGC">' + @(((Gobot.Models.User)Session["User"]).Credits) + '</white> <orange>GC</orange></h2></div>'); // Available credits
             $("#bet_placeBet > form").append('<div><h2>-</h2><h2><red class="deductGC">0</red> <orange style="visibility: hidden;">GC</orange></h2></div>'); // Deducted credits
             $("#bet_placeBet > form").append('<div><h2>=</h2><h2><white class="remainGC">0</white> <orange>GC</orange></h2></div>'); // Remaining credits
             $("#bet_placeBet > form").append('<div class="betSelector"></div>');
@@ -243,7 +254,7 @@
             $("#bet_placeBet > form").append('<input class="' + (pos == 1 ? 'right' : 'left') + '" type="submit" value="Confirmer"></input>');
 
             if (pos == 2) {
-                $("#bet_placeBet").append('<div class="teamImg" style="background-image: url(/Images/' + teamName.toLowerCase() + '.png)"></div>');
+                $("#bet_placeBet").append('<div class="teamImg" style="background-image: url(' + imagePath + ')"></div>');
                 $("#bet_placeBet").append('<div class="separator right"><div class="square"></div></div>');
             }
 
