--- a/Gobot/Gobot/Content/Teams.css
+++ b/Gobot/Gobot/Content/Teams.css
@@ -227,8 +227,7 @@ img {
     .team .overlay > h1 {
       position: absolute;
       width: 100%;
-      height: 100%;
-      line-height: 250px !important;
+      height: auto;
       color: #eeeeee;
       font: italic 900 40px Lato, Arial, sans-serif;
       margin: 0;
