--- a/Gobot/Gobot/Content/Teams.scss
+++ b/Gobot/Gobot/Content/Teams.scss
@@ -32,8 +32,7 @@ $teamH: 250px;
         > h1 {
             position: absolute;
             width: 100%;
-            height: 100%;
-            line-height: 250px !important;
+            height: auto;
             color: $off-white;
             font: italic 900 40px $font;
             margin: 0;
